Start using harp and coffee only files, no need for grunt in dev time.

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,4 @@
 node_modules/
 public/lib
 .idea/
-app/**/*.js
-config/*.js
-config/**/*.js
-public/script/*.js
-public/script/**/*.js
-public/style/*.css
-server.js
+npm-debug.log
