--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
         "npm": "1.2.x"
     },
     "scripts": {
-        "start": "node node_modules/grunt-cli/bin/grunt",
+        "start": "forever -w -c coffee server.coffee",
         "test": "node node_modules/grunt-cli/bin/grunt test",
-        "postinstall": "node node_modules/grunt-cli/bin/grunt install"
+        "postinstall": "bower install"
     },
     "dependencies": {
         "express": "latest",
         "jade": "latest",
+        "ejs": "latest",
         "mongoose": "latest",
         "connect-mongo": "latest",
         "connect-flash": "latest",
@@ -33,18 +34,12 @@
         "async": "latest",
         "view-helpers": "latest",
         "mean-logger": "latest",
-        "forever": "latest",
         "grunt": "latest",
-        "grunt-cli": "latest"
+        "harp": "latest"
     },
     "devDependencies": {
-        "supertest": "latest",
-        "should": "latest",
-        "grunt-contrib-watch": "latest",
         "grunt-contrib-coffee": "latest",
         "grunt-contrib-less": "latest",
-        "grunt-nodemon": "latest",
-        "grunt-concurrent": "latest",
-        "grunt-mocha-test": "latest"
+        "grunt-usemin": "latest"
     }
 }
