--- a/package.json
+++ b/package.json
@@ -1,50 +1,54 @@
 {
-    "name": "laere",
-    "description": "Create classrooms online",
-    "version": "1.0.0",
-    "private": false,
-    "author": "Guilherme Rodrigues",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/moongate/mean.git"
-    },
-    "engines": {
-        "node": "0.10.x",
-        "npm": "1.2.x"
-    },
-    "scripts": {
-        "start": "pm2 start server.coffee",
-        "stop": "pm2 stop server.coffee",
-        "test": "grunt test",
-        "postinstall": "bower install"
-    },
-    "dependencies": {
-        "express": "latest",
-        "ejs": "latest",
-        "ejs-locals": "latest",
-        "mongoose": "latest",
-        "connect-mongo": "latest",
-        "connect-flash": "latest",
-        "passport": "latest",
-        "passport-local": "latest",
-        "passport-facebook": "latest",
-        "passport-twitter": "latest",
-        "passport-github": "latest",
-        "passport-google-oauth": "latest",
-        "underscore": "latest",
-        "async": "latest",
-        "view-helpers": "latest",
-        "mean-logger": "latest",
+	"name": "laere",
+	"description": "The online classroom engine",
+	"version": "0.1.0",
+	"private": false,
+	"author": "Guilherme Rodrigues",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/gadr/clean.git"
+	},
+	"engines": {
+		"node": "0.10.x",
+		"npm": "1.2.x"
+	},
+	"scripts": {
+		"start": "grunt",
+		"test": "grunt test",
+		"postinstall": "bower install"
+	},
+	"dependencies": {
+		"express": "latest",
+		"ejs": "latest",
+		"ejs-locals": "latest",
+		"mongoose": "latest",
+		"connect-mongo": "latest",
+		"connect-flash": "latest",
+		"passport": "latest",
+		"passport-local": "latest",
+		"passport-facebook": "latest",
+		"passport-twitter": "latest",
+		"passport-github": "latest",
+		"passport-google-oauth": "latest",
+		"underscore": "latest",
+		"async": "latest",
+		"view-helpers": "latest",
+		"glob": "latest",
+		"mean-logger": "latest",
+		"harp": "latest"
+	},
+	"devDependencies": {
+        "supertest": "latest",
+        "should": "latest",
         "grunt": "latest",
-        "harp": "latest"
-    },
-    "devDependencies": {
         "grunt-contrib-coffee": "latest",
+        "grunt-contrib-watch": "latest",
         "grunt-contrib-less": "latest",
-        "grunt-usemin": "latest"
-    },
-    "peerDependencies": {
-      "grunt-cli": "*",
-      "pm2": "*"
-    }
+        "grunt-mocha-test": "latest",
+        "grunt-concurrent": "latest",
+        "grunt-nodemon": "latest"
+	},
+	"peerDependencies": {
+		"grunt-cli": "*"
+	}
 }
