--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
     "name": "laere",
     "version": "0.1.0",
     "dependencies": {
-        "bootstrap": "bowerjs/bootstrap#2.3.2",
+        "bootstrap": "3.0.0",
         "angular": "~1.0.6",
         "angular-resource": "~1.0.6",
         "angular-cookies": "~1.0.6",
