Update angular to 1.2.0rc3 and remove unused libs

--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,18 @@
 {
-  "name": "laere",
-  "version": "0.1.0",
-  "dependencies": {
-    "bootstrap": "3.0.0",
-    "angular": "~1.0.6",
-    "angular-resource": "~1.0.6",
-    "angular-cookies": "~1.0.6",
-    "angular-bootstrap": "~0.4.0",
-    "angular-ui-utils": "0.0.4",
-    "json3": "~3.2.4",
-    "jquery": "~1.9.1",
-    "angular-translate": "~1.1.0",
-    "angular-translate-loader-static-files": "~0.1.5",
-    "lodash": "~2.2.1"
-  }
+    "name": "laere",
+    "version": "0.1.0",
+    "dependencies": {
+        "bootstrap": "3.0.0",
+        "angular": "1.2.0-rc.3",
+        "angular-route": "~1.2.0-rc.3",
+        "angular-resource": "1.2.0-rc.3",
+        "angular-cookies": "1.2.0-rc.3",
+        "angular-bootstrap": "~0.6.0",
+        "angular-translate": "~1.1.0",
+        "angular-translate-loader-static-files": "~0.1.5",
+        "lodash": "~2.2.1"
+    },
+    "resolutions": {
+        "angular": "1.2.0-rc.3"
+    }
 }
