--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,19 @@
 {
-    "name": "laere",
-    "version": "0.1.0",
-    "dependencies": {
-        "bootstrap": "3.0.0",
-        "angular": "1.2.0-rc.3",
-        "angular-route": "~1.2.0-rc.3",
-        "angular-resource": "1.2.0-rc.3",
-        "angular-cookies": "1.2.0-rc.3",
-        "angular-bootstrap": "~0.6.0",
-        "angular-translate": "~1.1.0",
-        "angular-translate-loader-static-files": "~0.1.5",
-        "lodash": "~2.2.1"
-    },
-    "resolutions": {
-        "angular": "1.2.0-rc.3"
-    }
+  "name": "laere",
+  "version": "0.1.0",
+  "dependencies": {
+    "bootstrap": "3.0.0",
+    "angular": "1.2.0-rc.3",
+    "angular-route": "~1.2.0-rc.3",
+    "angular-resource": "1.2.0-rc.3",
+    "angular-cookies": "1.2.0-rc.3",
+    "angular-bootstrap": "~0.6.0",
+    "angular-translate": "~1.1.0",
+    "angular-translate-loader-static-files": "~0.1.5",
+    "lodash": "~2.2.1",
+    "angular-animate": "~1.2.0-rc.3"
+  },
+  "resolutions": {
+    "angular": "1.2.0-rc.3"
+  }
 }
