Add bower as a peer dependency

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "grunt-release": "~0.6.0"
   },
   "peerDependencies": {
-    "grunt-cli": "*"
+    "grunt-cli": "*",
+    "bower": "*"
   }
 }
