Remove bower from post-install

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "scripts": {
     "start": "grunt",
-    "test": "grunt test",
-    "postinstall": "bower install"
+    "test": "grunt test"
   },
   "dependencies": {
     "express": "latest",
