--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - "0.10"
 env:
-  - NODE_ENV=travis
+  - NODE_ENV=test
 services:
   - mongodb
+before_install:
+  - npm install -g mocha
