--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "grunt",
-    "test": "grunt test"
+    "test": "mocha --compilers coffee:coffee-script --reporter spec test/**"
   },
   "dependencies": {
     "express": "latest",
