Remove public folder and harp

--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "async": "latest",
     "view-helpers": "latest",
     "glob": "latest",
-    "mean-logger": "latest",
-    "harp": "0.10.0"
+    "mean-logger": "latest"
   },
   "devDependencies": {
     "supertest": "latest",
