--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "scripts": {
     "start": "pm2 start server.coffee",
+    "restart": "pm2 restart server.coffee",
+    "stop": "pm2 stop server.coffee",
     "test": "mocha --compilers coffee:coffee-script --reporter spec test/**"
   },
   "dependencies": {
