--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 before_install:
   - npm install -g mocha coffee-script
 after_success:
-  "curl --data 'kalxen' http://laere.co:9001"
+  "curl --data 'laere' http://laere.co:9001"
