Only build master branch
[skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ services:
   - mongodb
 before_install:
   - npm install -g mocha coffee-script
+branches:
+  only:
+    - master
 after_success:
   "curl --data 'laere' http://laere.co:9001"
