--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "mean-logger": "latest",
     "adaro": "~0.1.5",
     "dustjs-linkedin": "~2.2.0",
-    "dustjs-helpers": "~1.1.1"
+    "dustjs-helpers": "~1.1.1",
+    "harp": "^0.11.2",
+    "laere-ui": "git://github.com/moongate/laere-ui#v0.1.3"
   },
   "devDependencies": {
     "supertest": "latest",
