Remove unnecessary deps

--- a/package.json
+++ b/package.json
@@ -13,29 +13,20 @@
     "npm": "1.2.x"
   },
   "scripts": {
-    "start": "pm2 start server.coffee",
-    "restart": "pm2 reload server.coffee",
-    "stop": "pm2 stop server.coffee",
+    "start": "coffee app.coffee",
     "test": "mocha --compilers coffee:coffee-script/register --reporter spec test/**"
   },
   "dependencies": {
     "express": "latest",
-    "ejs": "latest",
-    "ejs-locals": "latest",
     "mongoose": "latest",
     "connect-mongo": "latest",
     "connect-flash": "latest",
     "passport": "latest",
     "passport-local": "latest",
     "passport-facebook": "latest",
-    "passport-twitter": "latest",
-    "passport-github": "latest",
-    "passport-google-oauth": "latest",
     "underscore": "latest",
-    "async": "latest",
     "view-helpers": "latest",
     "glob": "latest",
-    "mean-logger": "latest",
     "adaro": "~0.1.5",
     "dustjs-linkedin": "~2.2.0",
     "dustjs-helpers": "~1.1.1",
