--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
     "dustjs-linkedin": "~2.2.0",
     "dustjs-helpers": "~1.1.1",
     "harp": "^0.11.2",
-    "laere-ui": "git://github.com/moongate/laere-ui#v0.1.3"
+    "laere-ui": "git://github.com/moongate/laere-ui#v0.1.3",
+    "coffee-script": "^1.7.1",
+    "q-io": "^1.11.0"
   },
   "devDependencies": {
-    "supertest": "latest",
     "should": "latest",
-    "grunt": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-mocha-test": "latest",
-    "grunt-nodemon": "latest"
+    "gulp": "~3.5.2",
+    "gulp-mocha": "~0.4.1",
+    "gulp-nodemon": "~1.0.0",
+    "gulp-livereload": "^1.2.0",
+    "gulp-watch": "^0.5.0"
   },
   "peerDependencies": {
     "grunt-cli": "*"
