--- a/package.json
+++ b/package.json
@@ -17,30 +17,30 @@
     "test": "mocha --compilers coffee:coffee-script/register --reporter spec test/**"
   },
   "dependencies": {
-    "express": "latest",
-    "mongoose": "latest",
-    "connect-mongo": "latest",
-    "connect-flash": "latest",
-    "passport": "latest",
-    "passport-local": "latest",
-    "passport-facebook": "latest",
-    "underscore": "latest",
-    "view-helpers": "latest",
-    "glob": "latest",
     "adaro": "~0.1.5",
-    "dustjs-linkedin": "~2.2.0",
-    "dustjs-helpers": "~1.1.1",
-    "harp": "^0.11.2",
-    "laere-ui": "git://github.com/moongate/laere-ui#v0.2.0",
     "coffee-script": "^1.7.1",
-    "q-io": "^1.11.0"
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^0.8.2",
+    "dustjs-helpers": "~1.1.1",
+    "dustjs-linkedin": "~2.2.0",
+    "express": "^3.21.2",
+    "glob": "^5.0.15",
+    "harp": "^0.13.0",
+    "laere-ui": "git://github.com/moongate/laere-ui#master",
+    "mongoose": "^4.2.4",
+    "passport": "^0.3.0",
+    "passport-facebook": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "q-io": "^1.11.0",
+    "underscore": "^1.8.3",
+    "view-helpers": "^0.1.5"
   },
   "devDependencies": {
-    "should": "latest",
     "gulp": "~3.5.2",
     "gulp-mocha": "~0.4.1",
     "gulp-nodemon": "~1.0.0",
-    "gulp-watch": "^0.5.0"
+    "gulp-watch": "^0.5.0",
+    "should": "^7.1.1"
   },
   "peerDependencies": {
     "grunt-cli": "*"
